bugfix XE_Circle
Bug removed on realtime colorchange!

--- a/XE/ToDo
+++ b/XE/ToDo
@@ -2,5 +2,12 @@ ToDo- Liste der XE_Engine
 #########################
 
 - Eine Art PolyVector einbauen für zoom... oder zoomImage und rotateImage?!    			DONE - setScale(float scale) in XE_Object2D, 21.08.2014 12:00Uhr !!!
+- XE_Circle ( mit GL_TRIANGLE_FAN -> 2 Colors mit RGBA ! )... Particle möglich! 		DONE - 21.08.2014 13:42Uhr
 - Kollisionserkennung ( AABB-AABB , CIRCLE-CIRCLE, CIRCLE-AABB , COLLISIONRAY?! )
-- XE_Circle ( mit GL_TRIANGLE_FAN -> 2 Colors mit RGBA ! )... Particle möglich!
+
+
+
+BUGS:
+#####
+
+- XE_Circle - Color veränderung in runtime.... BUG!!!!									DONE - Bug gefixed : 21.08.2014 14:02Uhr
